Toolchain should be located at ~/tools

--- a/setup.env
+++ b/setup.env
@@ -2,8 +2,8 @@
 
 unset TOOLCHAIN_PATH
 
-# Just hardcoded for for now
-TOOLCHAIN_PATH=$PWD/../tools/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian-x64/bin
+# Just hardcoded for now - toolchain should be located at ~/tools directory
+TOOLCHAIN_PATH=$HOME/tools/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian-x64/bin
 
 if ! echo "$PATH" | grep -q "$TOOLCHAIN_PATH"; then
     PATH=$PATH:$TOOLCHAIN_PATH
