Setup build out dir. Create correct README

--- a/setup.env
+++ b/setup.env
@@ -10,3 +10,7 @@ if ! echo "$PATH" | grep -q "$TOOLCHAIN_PATH"; then
 fi
 
 export TOOLCHAIN_PATH
+
+echo "==================== setup.env ===================="
+echo "    TOOLCHAIN_PATH is here \"${TOOLCHAIN_PATH}\""
+echo "==================================================="
