Build all project into 'build/artifacts/firmware' dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,5 @@ project(qb-firmware LANGUAGES C CXX ASM)
 
 include(cmake/globals.cmake)
 include(cmake/firmware.cmake)
+
+add_subdirectory(qb/service)
