--- a/setup.env
+++ b/setup.env
@@ -1,16 +1,24 @@
 #!/bin/sh
 
-unset TOOLCHAIN_PATH
+unset LINUX_TOOLCHAIN_PATH
+unset QB_TOOLCHAIN_PATH
+unset QB_BUILD_TOOL_NAME
 
 # Just hardcoded for now - toolchain should be located at ~/tools directory
-TOOLCHAIN_PATH=$HOME/tools/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian-x64/bin
+LINUX_TOOLCHAIN_PATH=$HOME/tools/arm-bcm2708/gcc-linaro-arm-linux-gnueabihf-raspbian-x64/bin
+QB_TOOLCHAIN_PATH=$HOME/tools/gcc-linaro-7.3.1-2018.05-x86_64_aarch64-linux-gnu/bin
+QB_BUILD_TOOL_NAME=aarch64-linux-gnu
 
-if ! echo "$PATH" | grep -q "$TOOLCHAIN_PATH"; then
-    PATH=$PATH:$TOOLCHAIN_PATH
+if ! echo "$PATH" | grep -q "$LINUX_TOOLCHAIN_PATH"; then
+    PATH=$PATH:$LINUX_TOOLCHAIN_PATH
 fi
 
-export TOOLCHAIN_PATH
+export LINUX_TOOLCHAIN_PATH
+export QB_TOOLCHAIN_PATH
+export QB_BUILD_TOOL_NAME
 
 echo "==================== setup.env ===================="
-echo "    TOOLCHAIN_PATH is here \"${TOOLCHAIN_PATH}\""
+echo "    LINUX_TOOLCHAIN_PATH  =  ${LINUX_TOOLCHAIN_PATH}"
+echo "    QB_TOOLCHAIN_PATH     =  ${QB_TOOLCHAIN_PATH}"
+echo "    QB_BUILD_TOOL_NAME    =  ${QB_BUILD_TOOL_NAME}"
 echo "==================================================="
