Add U-Boot basic infrastructure

--- a/setup.env
+++ b/setup.env
@@ -13,6 +13,10 @@ if ! echo "$PATH" | grep -q "$LINUX_TOOLCHAIN_PATH"; then
     PATH=$PATH:$LINUX_TOOLCHAIN_PATH
 fi
 
+if ! echo "$PATH" | grep -q "$QB_TOOLCHAIN_PATH"; then
+    PATH=$PATH:$QB_TOOLCHAIN_PATH
+fi
+
 export LINUX_TOOLCHAIN_PATH
 export QB_TOOLCHAIN_PATH
 export QB_BUILD_TOOL_NAME
